se agnaden recursos a las caretas fonts e images

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="ar">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -21,53 +21,30 @@
             </ul>
         </nav>
     </header>
-    <main class="main"></main>
-    <footer class="footer">
-        <!-- el segundo contenedor tiene 4 navs -->
-        <div class="footer__flex">
-            <!-- cada nav tiene un contenedor con una imagen, un titulo y una lista -->
-            <nav class="footernav">
-                <div class="footernav__top">
-                    <div class="titulo footernav__title">Contacto</div>
-                </div>
-                <ul class="footernav__list">
-                    <li class="footernav__element">Atencion al cliente</li>
-                    <li class="footernav__element">¿Quiénes somos?</li>
-                    <li class="footernav__element">Trabaja con nosotros</li>
-                </ul>
-            </nav>
-            <nav class="footernav">
-                <div class="footernav__top">
-                    <div class="titulo footernav__title">Pago Seguro</div>
-                </div>
-                <ul class="footernav__list">
-                    <li class="footernav__element">Metodos de pago</li>
-                    <li class="footernav__element">Devoluciones</li>
-                    <li class="footernav__element">Aviso legal</li>
-                </ul>
-            </nav>
-            <nav class="footernav">
-                <div class="footernav__top">
-                    <div class="titulo footernav__title">Entregas</div>
-                </div>
-                <ul class="footernav__list">
-                    <li class="footernav__element">Gastos de envio</li>
-                    <li class="footernav__element">Envios internacionales</li>
-                    <li class="footernav__element">Incidencias</li>
-                </ul>
-            </nav>
-            <nav class="footernav">
-                <div class="footernav__top">
-                    <div class="titulo footernav__title">Ayuda</div>
-                </div>
-                <ul class="footernav__list">
-                    <li class="footernav__element">F.A.Q.</li>
-                    <li class="footernav__element">Politica de privacidad</li>
-                    <li class="footernav__element">Politica de cookies</li>
-                </ul>
-            </nav>
-        </div>
-    </footer>
+    <main class="main">
+        <section class="coche">
+            <h2 class="coche__titulo">Model S</h2>
+            <article class="coche__stats">
+                <article class="coche__dato">
+                    <h3 class="coche__subdato">600 km</h3>
+                    <p class="coche__subdato">Autonomía (est. según WLTP)</p>
+                </article>
+                <article class="coche__dato">
+                    <h3 class="coche__subdato">600 km</h3>
+                    <p class="coche__subdato">Autonomía (est. según WLTP)</p>
+                </article>
+                <article class="coche__dato">
+                    <h3 class="coche__subdato">600 km</h3>
+                    <p class="coche__subdato">Autonomía (est. según WLTP)</p>
+                </article>
+                <article class="coche__dato">
+                    <h3 class="coche__subdato">600 km</h3>
+                    <p class="coche__subdato">Autonomía (est. según WLTP)</p>
+                </article>
+            </article>
+        </section>
+    </main>
+    
     <script src="js/script.js"></script>
 </body>
 </html>
